--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */ 
+@import url('ttps://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css');
+@import url('https://bootswatch.com/4/cosmo/bootstrap.min.css');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    margin: 1% !important;
+}
+
+.row {
+    padding: 1px !important;
+}
